--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
                     <h4>Ahmed Eissa</h4>
-                    <h1>Ui &<br /> Ux Designer</h1> </div>
+                    <h1>Developer &<br /> Full Stack </h1> </div>
             </div>
         </div>
     </div>
@@ -67,8 +67,8 @@
                 <h4>01</h4>
                 <h1 class="size-50">Know <br /> About me</h1>
                 <div class="h-50"></div>
-                <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
-                <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
+                <p>testing 1</p>
+                <p>testing 2</p>
                 <div class="h-50"></div> <img src="img/Signature.svg" width="230" alt="" />
                 <div class="h-50"></div>
             </div>
@@ -93,30 +93,20 @@
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">April 2016 - Present</p>
-                            <h3>Geil,Danke! GmbH</h3>
-                            <h4>eines Web-Studios</h4>
-                            <p><strong>Projektmanagement mit Scrum</strong>
-                                <br>Ständiges Verbessern des agilen Entwicklungsprozesses beispielsweise durch Grunt, Yeoman, GIT, JIRA und BrowserStack.</p>
+                            <p class="timeline-event-thumbnail">Jun 2019 - Present</p>
+                            <h3>test h3</h3>
+                            <h4>test h4</h4>
+                            <p><strong>Freelancer</strong>
+                                <br>trying to be... haha</p>
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
                             <p class="timeline-event-thumbnail">November 2014 - Mars 2016</p>
-                            <h3>Freelancer</h3>
-                            <h4>Designer und Autor</h4>
-                            <p>Konzeption, Design und Produktion von Digitalen Magazinen mit InDesign, der Adobe Digital Publishing Suite und HTML5. Co-Autorin der Fachbücher "Digitales Publizieren für Tablets" und "Adobe Digital Publishing Suite" erschienen im dpunkt.verlag.</p>
-                        </div>
-                    </li>
-                    <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
-                        <label class="timeline-event-icon"></label>
-                        <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">April 2014</p>
-                            <h3>konplan gmbh</h3>
-                            <h4>IT-Consultant</h4>
-                            <p><strong>Systemarchitektur, Consulting</strong>
-                                <br>Konzeption und Modellierung von Systemen und APIs für Digital Publishing und Entitlement nach SOA</p>
+                            <h3>Programmer</h3>
+                            <h4>code , test , implement</h4>
+                            <p></p>
                         </div>
                     </li>
                 </ul>
@@ -284,11 +274,11 @@
             <div class="col-md-4" data-aos="fade-up">
 
                 <h3>Phone Number</h3>
-                <p>+20 5555 569 42</p>
+                <p>+852 xxxx xxxx</p>
                 <h3> Mobile Numberr</h3>
-                <p>+20 5555 569 42</p>
+                <p>+852 xxxx xxxx</p>
                 <h3>Email</h3>
-                <p>mail@info.me </p>
+                <p>henrytsuihoon@gmail.com</p>
 
                 <h3>Social Network</h3>
 
@@ -329,16 +319,16 @@
             <div class="container">
                 <div class="portfolio-padding">
                     <div class="col-md-8 col-md-offset-2">
-                        <h2>Geschäfts Eines<br /> Web-Studios</h2>
+                        <h2>test h2<br /> Web-Studios</h2>
                         <div class="h-50"></div>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
+                        <p>testing 8</p>
+                        <p>test 9</p>
                         <br />
                         <br /> <img src="img/portfolio/02.jpg" alt="" class="img-responsive" />
                         <br />
                         <br />
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
+                        <p>test 10</p>
+                        <p>test end</p>
                         <br />
                         <br /> </div>
                 </div>
