--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="container">
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-                    <h4>Ahmed Eissa</h4>
+                    <h4>Henry Tsui</h4>
                     <h1>Developer &<br /> Full Stack </h1> </div>
             </div>
         </div>
