--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
                     <h4>Henry Tsui</h4>
-                    <h1>Developer &<br /> Full Stack </h1> </div>
+                    <h1>Full Stack &<br /> </h1>Developer </div>
             </div>
         </div>
     </div>
